kustomize/overlays/minikube/istio/jwt-request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  jwtRules:
    - issuer: "http://192.168.49.2:30007/auth/realms/event-bridge-fm"
      jwksUri: "http://keycloak.keycloak:8180/auth/realms/event-bridge-fm/protocol/openid-connect/certs"
